--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,3 +2,6 @@
 @use './components/header';
 @use './components/nosso-espaco';
 @use './components/servicos';
+@use './components/descontos';
+@use './components/contatos';
+@use './components/footer';
