--- a/styles/components/_contatos.scss
+++ b/styles/components/_contatos.scss
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     gap: 2rem;
+    margin-bottom: 2rem;
     .contatos-imgs {
         max-width: 50%;
         display: flex;
